# Bot-Trading-Easy-Peasy-Full-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  result.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backtesting/: .gitignore  ai_logic.py  backtest.py  backtest_result.md  backtest_results.csv  backtest_runner.py  config.py  data_fetcher.py  main.py
backtesting/historical_data/: metadata.json
backtesting/historical_data/ADA_USDT/: 1h.csv  5m.csv
backtesting/historical_data/ARIA_USDT/: 1h.csv  5m.csv
backtesting/historical_data/AVAX_USDT/: 1h.csv  5m.csv
backtesting/historical_data/BNB_USDT/: 1h.csv  5m.csv
backtesting/historical_data/BREV_USDT/: 1h.csv  5m.csv
backtesting/historical_data/BTC_USDT/: 1h.csv  5m.csv
backtesting/historical_data/DOGE_USDT/: 1h.csv  5m.csv
backtesting/historical_data/ETH_USDT/: 1h.csv  5m.csv
backtesting/historical_data/FHE_USDT/: 1h.csv  5m.csv
backtesting/historical_data/HOME_USDT/: 1h.csv  5m.csv
backtesting/historical_data/LINK_USDT/: 1h.csv  5m.csv
backtesting/historical_data/LTC_USDT/: 1h.csv  5m.csv
backtesting/historical_data/NAORIS_USDT/: 1h.csv  5m.csv
backtesting/historical_data/RAVE_USDT/: 1h.csv  5m.csv
backtesting/historical_data/RECALL_USDT/: 1h.csv  5m.csv
backtesting/historical_data/SOL_USDT/: 1h.csv  5m.csv
backtesting/historical_data/SPK_USDT/: 1h.csv  5m.csv
backtesting/historical_data/SUI_USDT/: 1h.csv  5m.csv
backtesting/historical_data/TA_USDT/: 1h.csv  5m.csv
src/: .env.example  .gitignore  config.py  main.py
src/modules/: ai_brain.py  executor.py  market_data.py  onchain.py  pattern_recognizer.py  sentiment.py
src/utils/: calc.py  helper.py  prompt_builder.py
strategies/: Swing_Daily_Trend.md  Swing_Reversal_Sniper.md  ai role.md  aval strategy.md  liquidity sweep strategy 15m.md  pullback sniper scalp.md  wr 85 persen 15m.md
tests/: benchmark_market_data.py  benchmark_order_book.py  debug_telegram.py  test_chart_generation.py  test_helper_optimization.py  test_limit_market_config.py  test_limit_order_expiry.py  test_logging_reasoning.py  test_market_data_limits.py  test_market_data_optimization.py  test_market_structure.py  test_news_filtering.py  test_news_retrieval.py  test_notification_logic.py  test_notification_safety.py  test_onchain_inflow.py  test_pattern_validation.py  test_profit_loss_calc.py  test_reasoning_config.py  test_security_fix.py  test_sentiment_refactor.py  test_tpsl_fix.py  test_trailing_logic.py  test_vision_real.py  test_wick_rejection.py
(+10 files in other folders)
