[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-trading-easy-peasy"
version = "1.0.0"
description = "Easy Peasy Trading Bot: AI Vision & Logic Sniper"
readme = "README.md"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [
    { name = "Kaleksanan Barqi Aji Massani" }
]
keywords = ["crypto", "trading", "bot", "ai", "vision", "logic-sniper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "ccxt>=4.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "mplfinance>=0.12.10b0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pandas_ta>=0.3.14b0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
